Updates for CMake

--- a/cmake/Templates/timemory-config-components.cmake.in
+++ b/cmake/Templates/timemory-config-components.cmake.in
@@ -42,7 +42,7 @@ set(_COMPONENT_LIST )
 # always add headers
 list(APPEND @PROJECT_NAME@_FIND_COMPONENTS headers)
 if(TIMEMORY_INSTALL_TREE)
-    target_link_libraries(${_INTERFACE_LIB} INTERFACE @PROJECT_NAME@::timemory-headers)
+    target_link_libraries(${_INTERFACE_LIB} INTERFACE @PROJECT_NAME@::@PROJECT_NAME@-headers)
 endif()
 
 # determine link type
@@ -75,12 +75,21 @@ endforeach()
 macro(@PROJECT_NAME@_LINK_TARGET_IF_EXISTS _TARGET)
 
     # namespaced name in install tree
+    TIMEMORY_GET_TARGET_NAME(_TARGET_REAL ${_TARGET})
+    if(NOT "${_TARGET_REAL}" STREQUAL "")
+        set(_TARGET ${_TARGET_REAL})
+    endif()
+      
     if(TIMEMORY_INSTALL_TREE)
         set(_TARGET_NAME @PROJECT_NAME@::${_TARGET})
     else()
         set(_TARGET_NAME ${_TARGET})
     endif()
 
+    if(DEFINED @PROJECT_NAME@_DEBUG)
+        message(STATUS "TARGET: ${_TARGET}")
+    endif()
+      
     if("${_TARGET}" IN_LIST @PROJECT_NAME@_FIND_COMPONENTS OR TARGET ${_TARGET_NAME})
 
         if(TARGET ${_TARGET_NAME})
@@ -90,7 +99,7 @@ macro(@PROJECT_NAME@_LINK_TARGET_IF_EXISTS _TARGET)
                 endif()
                 target_link_libraries(${_INTERFACE_LIB} INTERFACE ${_TARGET_NAME})
                 list(APPEND @PROJECT_NAME@_FOUND_COMPONENTS ${_TARGET})
-            endif()
+             endif()
         else()
             if(DEFINED @PROJECT_NAME@_DEBUG)
                 message(STATUS "${_TARGET_NAME} not found for ${_INTERFACE_LIB}")
@@ -161,7 +170,7 @@ foreach(_COMPONENT ${@PROJECT_NAME@_FIND_COMPONENTS})
        TARGET @PROJECT_NAME@::timemory-${_LANGUAGE}-${_LINK})
         @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_COMPONENT}-${_LINK} ${_COMPONENT})
     else()
-        # @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_COMPONENT} ${_COMPONENT})
+        @PROJECT_NAME@_LINK_TARGET_IF_EXISTS(timemory-${_COMPONENT} ${_COMPONENT})
     endif()
 endforeach()
 
