--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -285,7 +285,12 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "" AND TIMEMORY_BUILD_INTERF
 
     # create the interface library
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-config-components.cmake)
-
+    if(TARGET timemory-headers)
+        target_link_libraries(${_INTERFACE_LIB} INTERFACE timemory-headers)
+    elseif(TARGET timemory::timemory-headers)
+        target_link_libraries(${_INTERFACE_LIB} INTERFACE timemory-headers)
+    endif()
+    
     if(TIMEMORY_EXTRACT_INTERFACE)
         set(@PROJECT_NAME@_INTERFACE_COMPONENTS ${_PREFIX}@LIBNAME@-headers ${_INTERFACE_LIB})
         include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-target-extract.cmake)
