--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -150,14 +150,15 @@ if(TIMEMORY_INSTALL_TREE)
     endif()
 
     set(gotcha_DIR "@gotcha_DIR@")
-    if(NOT "${gotcha_DIR}" STREQUAL "")
+    set(TIMEMORY_USE_GOTCHA @TIMEMORY_USE_GOTCHA@)
+    if(NOT "${gotcha_DIR}" STREQUAL "" OR TIMEMORY_USE_GOTCHA)
         find_package(gotcha QUIET @TIMEMORY_FIND_REQUIREMENT@)
     endif()
 
-    set(Kokkos_DIR "@Kokkos_DIR@")
-    if(NOT "${Kokkos_DIR}" STREQUAL "")
-        find_package(Kokkos QUIET @TIMEMORY_FIND_REQUIREMENT@)
-    endif()
+    # set(Kokkos_DIR "@Kokkos_DIR@")
+    # if(NOT "${Kokkos_DIR}" STREQUAL "")
+    #    find_package(Kokkos QUIET @TIMEMORY_FIND_REQUIREMENT@)
+    # endif()
 
     set(Dyninst_DIR "@Dyninst_DIR@")
     if(NOT "${Dyninst_DIR}" STREQUAL "")
@@ -285,10 +286,10 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "" AND TIMEMORY_BUILD_INTERF
 
     # create the interface library
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-config-components.cmake)
-    if(TARGET timemory-headers)
-        target_link_libraries(${_INTERFACE_LIB} INTERFACE timemory-headers)
-    elseif(TARGET timemory::timemory-headers)
-        target_link_libraries(${_INTERFACE_LIB} INTERFACE timemory-headers)
+    if(TARGET @PROJECT_NAME@-headers)
+        target_link_libraries(${_INTERFACE_LIB} INTERFACE @PROJECT_NAME@-headers)
+    elseif(TARGET @PROJECT_NAME@::@PROJECT_NAME@-headers)
+        target_link_libraries(${_INTERFACE_LIB} INTERFACE @PROJECT_NAME@::@PROJECT_NAME@-headers)
     endif()
     
     if(TIMEMORY_EXTRACT_INTERFACE)
