--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -144,37 +144,30 @@ if(TIMEMORY_INSTALL_TREE)
         set(@PROJECT_NAME@_${_TYPE}_DIRS ${@PROJECT_NAME@_${_TYPE}_DIR})
     endforeach()
 
+    macro(TIMEMORY_DEPENDENT_PACKAGE _NAME _OPT)
+        if(${_OPT})
+            # find_package(${_NAME} @TIMEMORY_FIND_REQUIREMENT@ ${ARGN})
+            find_package(${_NAME} REQUIRED ${ARGN})
+        endif()
+    endmacro()
+
+    set(MPI_C_COMPILER "@MPI_C_COMPILER@")
+    set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
+    set(MPIEXEC_EXECUTABLE "@MPIEXEC_EXECUTABLE@")
     set(caliper_DIR "@caliper_DIR@")
-    if(NOT "${caliper_DIR}" STREQUAL "")
-        find_package(caliper QUIET @TIMEMORY_FIND_REQUIREMENT@)
-    endif()
-
     set(gotcha_DIR "@gotcha_DIR@")
-    set(TIMEMORY_USE_GOTCHA @TIMEMORY_USE_GOTCHA@)
-    if(NOT "${gotcha_DIR}" STREQUAL "" OR TIMEMORY_USE_GOTCHA)
-        find_package(gotcha QUIET @TIMEMORY_FIND_REQUIREMENT@)
-    endif()
-
-    # set(Kokkos_DIR "@Kokkos_DIR@")
-    # if(NOT "${Kokkos_DIR}" STREQUAL "")
-    #    find_package(Kokkos QUIET @TIMEMORY_FIND_REQUIREMENT@)
-    # endif()
-
-    set(Dyninst_DIR "@Dyninst_DIR@")
-    if(NOT "${Dyninst_DIR}" STREQUAL "")
-        find_package(Dyninst QUIET @TIMEMORY_FIND_REQUIREMENT@)
-    endif()
-
     set(OpenMP_DIR "@OpenMP_DIR@")
-    if(NOT "${OpenMP_DIR}" STREQUAL "" OR @TIMEMORY_USE_OMPT@)
-        find_package(OpenMP QUIET @TIMEMORY_FIND_REQUIREMENT@)
-    endif()
-
+    set(Dyninst_DIR "@Dyninst_DIR@")
     set(Boost_DIR "@Boost_DIR@")
-    if(NOT "${Boost_DIR}" STREQUAL "")
-        find_package(Boost QUIET @TIMEMORY_FIND_REQUIREMENT@ COMPONENTS
-            @TIMEMORY_BOOST_COMPONENTS@)
-    endif()
+    # set(Kokkos_DIR "@Kokkos_DIR@")
+
+    timemory_dependent_package(MPI      @TIMEMORY_USE_MPI@)
+    timemory_dependent_package(caliper  @TIMEMORY_USE_CALIPER@)
+    timemory_dependent_package(gotcha   @TIMEMORY_USE_GOTCHA@)
+    timemory_dependent_package(OpenMP   @TIMEMORY_USE_OMPT@)
+    timemory_dependent_package(Dyninst  @TIMEMORY_USE_DYNINST@)
+    timemory_dependent_package(Boost    @TIMEMORY_USE_DYNINST@ COMPONENTS "@TIMEMORY_BOOST_COMPONENTS@")
+    # timemory_dependent_package(Kokkos @TIMEMORY_USE_KOKKOS@)
 
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-library-depends.cmake)
     check_required_components(@PROJECT_NAME@)
