--- a/source/timemory/components/CMakeLists.txt
+++ b/source/timemory/components/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(caliper)
 add_subdirectory(cuda)
 add_subdirectory(cupti)
 add_subdirectory(craypat)
+add_subdirectory(data_tracker)
 add_subdirectory(gotcha)
 add_subdirectory(gperftools)
 add_subdirectory(likwid)
