Docs + timemory-avail fixes + timemory-run improvements
- timemory_add_components
- timemory_remove_components
- fix to timemory_fork
- updated descriptions for all components
- example for custom dynamic instrumentation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -38,4 +38,6 @@ add_subdirectory(ex-gpu-roofline)
 # Python related
 add_subdirectory(ex-python)
 
+# Dynamic instrumentation
+add_subdirectory(ex-custom-dynamic-instr)
 cmake_policy(POP)
