--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -39,7 +39,7 @@ if(TIMEMORY_BUILD_MPIP_LIBRARY AND (NOT TARGET timemory-cxx-shared OR NOT TIMEMO
     set(TIMEMORY_BUILD_MPIP_LIBRARY OFF CACHE BOOL "Build the mpiP library" FORCE)
 endif()
 
-if(TIMEMORY_BUILD_OMPT_LIBRARY AND (NOT TARGET timemory-cxx-shared OR NOT TIMEMORY_USE_OMPT))
+if(TIMEMORY_BUILD_OMPT_LIBRARY AND NOT TIMEMORY_USE_OMPT)
     message(AUTHOR_WARNING "TIMEMORY_BUILD_OMPT_LIBRARY requires BUILD_SHARED_LIBS=ON and TIMEMORY_USE_OMPT=ON...")
     set(TIMEMORY_BUILD_OMPT_LIBRARY OFF CACHE BOOL "Build the OMPT library" FORCE)
 endif()
