--- a/source/timemory/components/cupti/CMakeLists.txt
+++ b/source/timemory/components/cupti/CMakeLists.txt
@@ -7,6 +7,12 @@ if(TIMEMORY_USE_CUPTI)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
                                    ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
 
+    if(CMAKE_CUDA_COMPILER)
+        set_source_files_properties(${source_files} PROPERTIES
+            LANGUAGE CUDA
+            LINKER_LANGUAGE CUDA)
+    endif()
+
     build_intermediate_library(USE_INTERFACE                               
         NAME                ${NAME}
         TARGET              ${NAME}-component
