Adding jump library basics

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,14 @@
 
 #----------------------------------------------------------------------------------------#
 #
+#                       JUMP LIBRARY
+#
+#----------------------------------------------------------------------------------------#
+
+add_subdirectory(jump)
+
+#----------------------------------------------------------------------------------------#
+#
 #                       STUBS LIBRARY
 #
 #----------------------------------------------------------------------------------------#
