build-tree fixes to jump and stubs library path resolution

--- a/source/jump/CMakeLists.txt
+++ b/source/jump/CMakeLists.txt
@@ -29,6 +29,12 @@ foreach(LIB_TYPE shared static)
     install(TARGETS timemory-jump-${LIB_TYPE}
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/jump)
 
+    # build tree
+    execute_process(
+        COMMAND ${CMAKE_COMMAND} -E create_symlink jump/libtimemory.so libtimemory-jump.so
+        WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
+
+    # install tree
     install(CODE "
 EXECUTE_PROCESS(
     COMMAND ${CMAKE_COMMAND} -E create_symlink timemory/jump/libtimemory.so libtimemory-jump.so
