--- a/source/stubs/CMakeLists.txt
+++ b/source/stubs/CMakeLists.txt
@@ -29,6 +29,12 @@ foreach(LIB_TYPE shared static)
     install(TARGETS timemory-stubs-${LIB_TYPE}
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/stubs)
 
+    # build tree
+    execute_process(
+        COMMAND ${CMAKE_COMMAND} -E create_symlink stubs/libtimemory.so libtimemory-stubs.so
+        WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
+
+    # install tree
     install(CODE "
 EXECUTE_PROCESS(
     COMMAND ${CMAKE_COMMAND} -E create_symlink timemory/stubs/libtimemory.so libtimemory-stubs.so
