component_bundle + memory leak fix + misc
- fixed memory leak with generic_operator + generic deleter
- removed mpi_output_per_{rank,node} options
- added collapse_processes option
- new component_bundle variadic wrapper
- new auto_bundle variadic wrapper
- filter_false fixes + filter_if_false_after_decay - operation_filter_false
- removed operations/types/pointer.hpp
- additions to operations/types/merge.hpp
- removed available_tuple -> use available_t
- timemory-run searches multiple paths for libraries

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -84,6 +84,11 @@ add_timemory_google_test(argparse_tests
     LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
                     timemory-analysis-tools)
 
+add_timemory_google_test(component_bundle_tests
+    SOURCES         component_bundle_tests.cpp
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
+
 add_timemory_google_test(flat_tests
     DISCOVER_TESTS
     SOURCES         flat_tests.cpp
