--- a/source/tools/kokkos-connector/CMakeLists.txt
+++ b/source/tools/kokkos-connector/CMakeLists.txt
@@ -38,9 +38,14 @@ include(CMakeParseArguments)
 set(LINKER_LANGUAGE CXX)
 set(CUDA_AVAILABLE OFF)
 
-check_language(CUDA)
-if(CMAKE_CUDA_COMPILER)
-    enable_language(CUDA)
+if(NOT TIMEMORY_KOKKOS_TOOLS_IN_SOURCE)
+    check_language(CUDA)
+    if(CMAKE_CUDA_COMPILER)
+        enable_language(CUDA)
+        set(LINKER_LANGUAGE CUDA)
+        set(CUDA_AVAILABLE ON)
+    endif()
+elseif(TIMEMORY_USE_CUDA AND CMAKE_CUDA_COMPILER)
     set(LINKER_LANGUAGE CUDA)
     set(CUDA_AVAILABLE ON)
 endif()
@@ -83,8 +88,6 @@ function(ADD_CONNECTOR_OPTION _OPT _DESCRIPT _DEFAULT)
     list(APPEND _OPTIONS_LIST ${TIMEMORY_KOKKOS_TOOLS_OPTION}${_OPT})
     set(_OPTIONS_LIST "${_OPTIONS_LIST}" PARENT_SCOPE)
 endfunction()
-
-message(STATUS "")
 
 add_connector_option(USE_MPI "Enable MPI support" OFF mpi)
 add_connector_option(USE_TAU "Enable TAU support" OFF tau)
@@ -165,7 +168,7 @@ endif()
 # general options
 set(${TIMEMORY_KOKKOS_TOOLS_OPTION}BUILD_CONNECTORS "all" CACHE STRING "List of connector configurations to build")
 if(TIMEMORY_KOKKOS_TOOLS_IN_SOURCE)
-    add_option(${TIMEMORY_KOKKOS_TOOLS_OPTION}BUILD_CONFIG "Build various connector configurations" ON)
+    add_option(${TIMEMORY_KOKKOS_TOOLS_OPTION}BUILD_CONFIG "Build various connector configurations" OFF)
     add_feature(${TIMEMORY_KOKKOS_TOOLS_OPTION}BUILD_CONNECTORS "List of connector configurations to build")
 else()
     option(${TIMEMORY_KOKKOS_TOOLS_OPTION}BUILD_CONFIG "Build various connector configurations" ON)
