--- a/source/timemory/environment/CMakeLists.txt
+++ b/source/timemory/environment/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 build_intermediate_library(
+    USE_INTERFACE
     NAME                environment
     TARGET              environment
     CATEGORY            GLOBAL
