--- a/source/tools/timemory-run/CMakeLists.txt
+++ b/source/tools/timemory-run/CMakeLists.txt
@@ -8,36 +8,42 @@ endif()
 #
 if(TIMEMORY_USE_DYNINST)
 
-    file(GLOB_RECURSE EXCLUDE_SOURCE_FILES
-        ${PROJECT_SOURCE_DIR}/source/*.c
-        ${PROJECT_SOURCE_DIR}/source/*.cu
-        ${PROJECT_SOURCE_DIR}/source/*.cpp
-        ${PROJECT_SOURCE_DIR}/external/*.c
-        ${PROJECT_SOURCE_DIR}/external/*.C
-        ${PROJECT_SOURCE_DIR}/external/*.cu
-        ${PROJECT_SOURCE_DIR}/external/*.cc
-        ${PROJECT_SOURCE_DIR}/external/*.cxx
-        ${PROJECT_SOURCE_DIR}/external/*.cpp
-    )
+    if(NOT DEFINED EXCLUDE_SOURCE_FILES OR "${EXCLUDE_SOURCE_FILES}" STREQUAL "")
 
-    foreach(_FILE ${EXCLUDE_SOURCE_FILES})
-        if(NOT "${_FILE}" MATCHES "/tests/" AND
-            NOT "${_FILE}" MATCHES "/test/" AND
-            NOT "${_FILE}" MATCHES "/unittests/" AND
-            NOT "${_FILE}" MATCHES "google-test" AND
-            NOT "${_FILE}" MATCHES "/example/" AND
-            NOT "${_FILE}" MATCHES "/examples/" AND
-            NOT "${_FILE}" MATCHES "/doc/" AND
-            NOT "${_FILE}" MATCHES "/docs/")
-            get_filename_component(_FILE "${_FILE}" NAME)
-            list(APPEND _EXCLUDE ${_FILE})
-        endif()
-    endforeach()
+        unset(EXCLUDE_SOURCE_FILES CACHE)
 
-    list(REMOVE_DUPLICATES _EXCLUDE)
-    set(EXCLUDE_SOURCE_FILES ${_EXCLUDE})
-    unset(_EXCLUDE)
-    string(REPLACE ";" "|" EXCLUDE_SOURCE_FILES "${EXCLUDE_SOURCE_FILES}")
+        file(GLOB_RECURSE EXCLUDE_SOURCE_FILES
+            ${PROJECT_SOURCE_DIR}/source/*.c
+            ${PROJECT_SOURCE_DIR}/source/*.cu
+            ${PROJECT_SOURCE_DIR}/source/*.cpp
+            ${PROJECT_SOURCE_DIR}/external/*.c
+            ${PROJECT_SOURCE_DIR}/external/*.C
+            ${PROJECT_SOURCE_DIR}/external/*.cu
+            ${PROJECT_SOURCE_DIR}/external/*.cc
+            ${PROJECT_SOURCE_DIR}/external/*.cxx
+            ${PROJECT_SOURCE_DIR}/external/*.cpp
+            )
+
+        foreach(_FILE ${EXCLUDE_SOURCE_FILES})
+            if(NOT "${_FILE}" MATCHES "/tests/" AND
+                    NOT "${_FILE}" MATCHES "/test/" AND
+                    NOT "${_FILE}" MATCHES "/unittests/" AND
+                    NOT "${_FILE}" MATCHES "google-test" AND
+                    NOT "${_FILE}" MATCHES "/example/" AND
+                    NOT "${_FILE}" MATCHES "/examples/" AND
+                    NOT "${_FILE}" MATCHES "/doc/" AND
+                    NOT "${_FILE}" MATCHES "/docs/")
+                get_filename_component(_FILE "${_FILE}" NAME)
+                list(APPEND _EXCLUDE ${_FILE})
+            endif()
+        endforeach()
+
+        list(REMOVE_DUPLICATES _EXCLUDE)
+        string(REPLACE ";" "|" _EXCLUDE "${_EXCLUDE}")
+        set(EXCLUDE_SOURCE_FILES "${_EXCLUDE}" CACHE INTERNAL "Excluded source files")
+
+    endif()
+
     configure_file(${CMAKE_CURRENT_LIST_DIR}/generated/timemory-run-regex.cpp.in
         ${CMAKE_CURRENT_LIST_DIR}/generated/timemory-run-regex.cpp @ONLY)
 
