--- a/source/timemory/runtime/CMakeLists.txt
+++ b/source/timemory/runtime/CMakeLists.txt
@@ -2,6 +2,12 @@
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
+if(TIMEMORY_USE_CUDA AND CMAKE_CUDA_COMPILER)
+    set_source_files_properties(${source_files} PROPERTIES
+        LANGUAGE CUDA
+        LINKER_LANGUAGE CUDA)
+endif()
+
 build_intermediate_library(
     USE_INTERFACE
     NAME                runtime
