cmakedefine + gotcha example update + improved concepts
- tuple_type and list_type from hybrid are no longer valid. Use tuple_t and list_t
- remove_duplicates -> remove_duplicates_t

--- a/cmake/Templates/defines.h.in
+++ b/cmake/Templates/defines.h.in
@@ -24,6 +24,9 @@
 
 #pragma once
 
-#include "timemory/components/base/declaration.hpp"
-#include "timemory/components/base/definition.hpp"
-#include "timemory/components/base/types.hpp"
+/// \file timemory/defines.h
+/// \brief Provides the definitions for the installation if not using cmake
+
+#if !defined(TIMEMORY_SOURCE) && !defined(TIMEMORY_CMAKE)
+@timemory_CMAKE_DEFINES@
+#endif
