Python components module + timem MPI
- mpi_get has new routines
- sampling has better support for non-child process
- argparse::argument_vector
- utility library
- popen headers
- piecewise select
- timemory-pid

--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -21,6 +21,7 @@ install(FILES ${CMAKE_CURRENT_LIST_DIR}/defines.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/timemory)
 
 # subdirs
+add_subdirectory(utility)
 add_subdirectory(hash)
 add_subdirectory(environment)
 add_subdirectory(settings)
