--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -117,6 +117,8 @@ else:
                    # --------------- modules ---------------#
                    'libpytimemory',
                    'mpi_support',
+                   'components',
+                   'component',
                    'plotting',
                    'roofline',
                    'bundle',
