--- a/source/timemory/components/cupti/CMakeLists.txt
+++ b/source/timemory/components/cupti/CMakeLists.txt
@@ -9,7 +9,7 @@ if(TIMEMORY_USE_CUPTI)
 
     if(CMAKE_CUDA_COMPILER)
         set_source_files_properties(${source_files} PROPERTIES
-            LANGUAGE CUDA
+            # LANGUAGE CUDA
             LINKER_LANGUAGE CUDA)
     endif()
 
